add ::utils:: package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,6 @@ export(new_aermod)
 export(out_tbl)
 export(read_aermod_inp)
 export(read_aermod_out)
+export(receptor_tbl)
 export(run_aermod)
 export(source_tbl)
