--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(downwash_tbl)
 export(met_tbl)
 export(new_aermod)
 export(out_tbl)
+export(proj_tbl)
 export(read_aermod_inp)
 export(read_aermod_out)
 export(receptor_tbl)
