--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: aermod
 Type: Package
-Title: Interface to EPA's air dispersion model 'AERMOD'
+Title: Interface to EPA's air dispersion model AERMOD
 Version: 0.0.0.9000
 Authors@R: person("Dorian", "Kvale", email = "dorian.kvale@state.mn.us", role = c("aut", "cre"))
 Description: A data frame interface to EPA's air dispersion model AERMOD.
 Depends:
-    R (>= 3.2)
+    R (>= 3.0)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
@@ -14,7 +14,8 @@ Imports:
     dplyr,
     bpip,
     receptors,
-    tibble
+    tibble,
+    magrittr
 Suggests:
     knitr,rmarkdown
 VignetteBuilder: knitr
