write_aermod: add control pathway

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,4 +11,5 @@ export(read_aermod_out)
 export(receptor_tbl)
 export(run_aermod)
 export(source_tbl)
+export(write_aermod)
 importFrom(magrittr,"%>%")
