write_aermod: use is_min_length() for input checks
write_aermod: use first row of input data for non source inputs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,3 +13,5 @@ export(run_aermod)
 export(source_tbl)
 export(write_aermod)
 importFrom(magrittr,"%>%")
+importFrom(receptors,"fw")
+importFrom(tibble,"tibble")
