round temp to 3 decimals;

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(downwash_df)
 export(is_valid)
 export(met_df)
 export(new_aermod)
+export(new_output)
 export(out_df)
 export(proj_df)
 export(read_aermod_inp)
