add lat-long to UTM transforms, is_over(), and read plot and pos files

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ Imports:
     receptors,
     installEPA,
     tibble,
-    magrittr
+    magrittr,
+    sf
 Suggests:
     knitr,rmarkdown
 VignetteBuilder: knitr
