--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,9 @@
 
 export(control_df)
 export(downwash_df)
+export(is_over)
 export(is_valid)
+export(ll_to_utm)
 export(met_df)
 export(new_aermod)
 export(new_output)
@@ -10,9 +12,13 @@ export(out_df)
 export(proj_df)
 export(read_aermod_inp)
 export(read_aermod_out)
+export(read_maxdcont)
+export(read_plt)
+export(read_pos)
 export(receptor_df)
 export(run_aermod)
 export(source_df)
+export(utm_to_ll)
 export(write_aermod)
 importFrom(magrittr,"%>%")
 importFrom(receptors,"fw")
